--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/tungsten_12h_web_game/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/tungsten_12h_web_game/WebGL Builds/Build;C:/tungsten_12h_web_game/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
